--- a/web/package.json
+++ b/web/package.json
@@ -10,20 +10,33 @@
     "@fortawesome/free-regular-svg-icons": "^6.3.0",
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
     "@fortawesome/react-fontawesome": "^0.1.19",
-    "@mantine/core": "^5.10.0",
-    "@mantine/dates": "^5.10.0",
-    "@mantine/hooks": "^5.10.0",
+    "@radix-ui/react-checkbox": "^1.3.2",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-hover-card": "^1.1.14",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-progress": "^1.1.7",
+    "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slider": "^1.3.5",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tooltip": "^1.2.7",
     "@vitejs/plugin-react": "^4.2.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "dayjs": "^1.11.7",
     "focus-trap-react": "^9.0.2",
     "framer-motion": "^8.0.2",
+    "lucide-react": "^0.525.0",
     "prettier": "^2.7.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.41.3",
-    "react-hot-toast": "^2.5.2",
     "react-markdown": "^8.0.1",
+    "react-select": "^5.10.2",
     "remark-gfm": "^3.0.1",
+    "sonner": "^2.0.6",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss-animate": "^1.0.7",
     "tinycolor2": "^1.6.0",
     "typescript": "^4.6.3",
     "vite": "^5.1.8",
@@ -39,16 +52,17 @@
     "@babel/core": ">=7.0.0 <8.0.0",
     "@babel/plugin-syntax-flow": "^7.14.5",
     "@babel/plugin-transform-react-jsx": "^7.14.9",
-    "@types/node": "^20.9.0",
+    "@types/node": "^24.0.13",
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
     "@types/tinycolor2": "^1.4.6",
-    "autoprefixer": "^10.0.2",
+    "autoprefixer": "^10.4.21",
     "cross-env": "^7.0.3",
     "csstype": "^3.0.10",
-    "postcss": "^8.4.31",
+    "postcss": "^8.5.6",
     "prop-types": "^15.8.1",
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "tailwindcss": "3"
   },
   "patchedDependencies": {
     "react-hot-toast@2.5.2": "patches/react-hot-toast@2.5.2.patch"
